<resources>
    <string name="str_home_menu_title">yehuijifeng@gmail.com</string>
    <string name="str_pyramid">股市金字塔</string>
    <string name="str_calculator">计算器</string>
    <string name="str_setting">设置</string>
    <string name="str_share">分享给好友</string>
    <string name="str_exceptional">打赏</string>
    <string name="str_feedback">意见反馈</string>
    <string name="str_again_click_exit">再按一次退出应用</string>
    <string name="str_qr_code">二维码</string>
    <string name="str_ruler">尺子</string>
    <string name="str_exit">退出</string>
    <string name="str_sd_card_permission_error">请允许手机存储权限，以便正常使用！</string>
    <string name="str_protractor">量角器</string>
    <string name="str_ocr">文字识别</string>
    <string name="str_help_title">寻求帮助</string>
    <string name="str_help_content">使用遇到问题？\n您可以选择拨打客服电话描述问题\n或者向客服邮箱编写您遇到的问题</string>
    <string name="str_help_tel">打电话</string>
    <string name="str_help_qq">QQ聊天</string>
    <string name="str_compass">指南针</string>
    <string name="str_home">首页</string>
    <string name="str_subtitles">LED字幕</string>
    <string name="str_reward_tips">如果你觉得这个App挺好用，就打赏鼓励一下作者吧！</string>
    <string name="str_reward_title">打赏作者</string>
    <string name="str_reward_content">如果你觉得这个App还不错，就打赏一下作者吧！\n毕竟创作不易，您的鼓励是产品越来越好的动力！</string>
    <string name="str_reward_ok">支付宝打赏</string>
    <string name="str_reward_cancel">微信扫码打赏</string>
    <string name="str_wx_content">因为微信无法直接支付，请选择系统相册中的二维码进行扫码支付</string>
    <string name="str_wx_ok">微信扫一扫</string>
    <string name="str_install_not_qq">没有安装QQ客户端！</string>
    <string name="str_service">联系客服</string>
    <string name="str_clean_cache">清除缓存(%s)</string>
    <string name="str_privacy">隐私政策</string>
    <string name="str_agreement_title">温馨提示</string>
    <string name="str_agreement_content">1.为更好地提供工具箱各种功能的正常使用以及相关服务的运行，我们会根据您使用功能或服务的具体功能需要，收集必要的设备信息（可能涉及设备名，设备版本等相关信息）；
        \n\n2.未经您同意，我们不会从第三方获取、共享或对外提供您的设备信息；
        \n\n3.您可以同意、拒绝相关权限和获取设备信息请求
    \n\n4.产品集成友盟+SDK，友盟+SDK需要收集您的设备Mac地址、唯一设备识别码（IMEI/android ID/IDFA/OPENUDID/GUID、SIM 卡 IMSI 信息）以提供统计分析服务，并通过地理位置校准报表数据准确性，提供基础反作弊能力</string>
    <string name="str_agreement_ok">同意</string>
    <string name="str_agreement_clean">不同意</string>
    <string name="str_agreement_title_tips">欢迎来到：</string>
    <string name="str_agreement_dialog_content">您可以阅读完整版《隐私政策》</string>
    <string name="str_private_agreement">《隐私政策》</string>
    <string name="str_store">去评分</string>
    <string name="str_add_function">添加</string>
    <string name="str_function_dialog_title">选择常用功能</string>
    <string name="str_function_user">常用功能</string>

</resources>