<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuService"
        android:orderInCategory="80"
        android:title="@string/str_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuFeedback"
        android:orderInCategory="80"
        android:title="@string/str_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuShare"
        android:orderInCategory="80"
        android:title="@string/str_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuStore"
        android:orderInCategory="80"
        android:title="@string/str_store" />
    <item
        android:id="@+id/menuPrivacy"
        android:orderInCategory="80"
        android:title="@string/str_privacy"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuCache"
        android:orderInCategory="80"
        android:title="@string/str_clean_cache"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuReward"
        android:icon="@drawable/ic_home_title_shang"
        android:orderInCategory="80"
        android:title="@string/str_exceptional"
        app:showAsAction="ifRoom" />
</menu>
